06-currency-conversion-cloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currency-conversion-cloud
  name: currency-conversion-cloud
  namespace: default
spec:
  replicas: 2
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-conversion-cloud
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-conversion-cloud
    spec:
      containers:
      - image: havyx/currency-conversion-cloud:0.0.5-RELEASE #CHANGE
        imagePullPolicy: Always
        name: currency-conversion-cloud
#        env: //CHANGE
#          - name: CURRENCY_EXCHANGE_URI
#            value: http://currency-exchange
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: currency-conversion-cloud
  name: currency-conversion-cloud
  namespace: default
spec:
  ports:
  - # nodePort: 30701 
    port: 8100 
    protocol: TCP
    targetPort: 8100 
  selector:
    app: currency-conversion-cloud
  sessionAffinity: None 
  type: NodePort
